2000-09-15  Brent Welch <welch@ajubasolutions.com>

	* Created this module.
